# SDL2Wrapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  bootstrap.py  library.h
src/: cppSDL.cpp  cppSDL.hpp  cppSDLConcepts.hpp  cppSDLevent.cpp  cppSDLevent.hpp  cppSDLexception.hpp  cppSDLrect.hpp  cppSDLrenderer.cpp  cppSDLrenderer.hpp  cppSDLrwindow.cpp  cppSDLrwindow.hpp  cppSDLsurface.cpp  cppSDLsurface.hpp  cppSDLswindow.cpp  cppSDLswindow.hpp  cppSDLtexture.cpp  cppSDLtexture.hpp  cppSDLwindow.cpp  cppSDLwindow.hpp  cppSDLwindowsurface.cpp  cppSDLwindowsurface.hpp
src/interface/: irenderable.cpp  irenderable.hpp  isurface.cpp  isurface.hpp  iwindow.cpp  iwindow.hpp
test/: test.cpp
